--- a/README
+++ b/README
@@ -54,15 +54,23 @@ You have been warned!
 
 == Translations
 
-  Currently, the application is available in 2 languages: English and German. The locale is set during the application boot and it is not possible to switch it during application run.
+  Currently, the application is available in 2 languages: English and German. Default locale is set during the application boot, but is's possible to switch to different locale while application is running - just click link with locale name in the header.
 
-  To change the locale edit aprropriate line in the environment file config/environments/production.rb or config/environments/development.rb. The line looks like:
+  To add missing translation for non-default locale:
+
+1. import all keys from primary locale file: rake tolk:sync
+
+2. importing non-primary locales: rake tolk:import
+
+3. start application in development mode, open up http://localhost:3000/tolk
+
+4. find your missing translation by english phrase or key without first part, so if you see: "translation missing for key en, supervisions, show, title", then you need to search for "supervisions.show.title" key
+
+5. edit, and save, and when ready dump your translations: rake tolk:dump
+
+  To change the default locale edit aprropriate line in the environment file config/environments/production.rb or config/environments/development.rb. The line looks like:
 
   # I18n.default_locale = :en
-
-=== Translations maintenance
-
-  All translated strings are gathered automatically in the "test" and "cucumber" environments. They are saved to the config/locales/application_en.yml file. You can edit this file manually as the new translations will be merged so your old changes will not be lost.
 
   Other localized files are:
    * db/default_rules_<locale>.csv
