Add request tests for ideas in supervision

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -494,6 +494,9 @@ en:
         providing_solutions: Providing solutions
         voting_on_topics: Voting on topics
 
+      supervision_updates:
+        idea: "Idea's rating has been changed"
+        solution: "Solution's rating has been changed"
       supervision_state_transition:
         asking_questions:
           providing_ideas: Advanced to "Ideas" state
